--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
   "author": "Amir Sanni <amirsanni@gmail.com>",
   "license": "ISC",
   "engines" : { 
-    "npm" : ">=7.0.0",
-    "node" : ">=16.0.0"
+    "npm" : "8.5.0",
+    "node" : "16.14.2"
   },
   "bugs": {
     "url": "https://github.com/amirsanni/livestream-server/issues"
